--- a/src/main/resources/db/connection.properties
+++ b/src/main/resources/db/connection.properties
@@ -1,3 +1,16 @@
-pgsql.url=jdbc:postgresql://localhost:5432/mybooks
-pgsql.usr=postgres
-pgsql.pwd=postgres
+# jdbc config - add driver class name
+db.dcn=org.postgresql.Driver
+db.url=jdbc:postgresql://localhost:5432/postgres
+db.usr=postgres
+db.pwd=sa
+db.sec.schema=auth
+
+
+# hibernate config
+hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+hibernate.show_sql=true
+hibernate.format_sql=false
+# this will probably generate error if 'none' is not recognized option in this version
+hibernate.hbm2ddl.auto=none
+hibernate.cache.use_second_level_cache=false
+hibernate.cache.use_query_cache=false
