--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,11 @@
 			<version>2.1.10.RELEASE</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-hibernate5</artifactId>
+			<version>2.8.4</version>
+		</dependency>
 
 	</dependencies>
 	<build>
